# ColliderML-Production

./: .gitignore  .gitignore~  CLAUDE.md  MEMORY.md  README.md  TESTING.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: sync-spaces.yml  test.yml
.logs/: SINGLE_PARTICLE_SIMULATION.md  bsm_physics_justification.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
backend/app/: __init__.py  abuse.py  auth.py  cap.py  config.py  db.py  email.py  leaderboard.py  main.py  sbatch_template.sh.j2  schemas.py  sfapi_runner.py  webhooks.py
backend/migrations/: 001_initial.sql  002_benchmarks.sql  003_webhooks.sql
backend/tests/: conftest.py  test_abuse.py  test_cap.py  test_e2e.py  test_leaderboard_e2e.py
batch/: job_submission.py  nersc_to_eos_transfer.sh  nersc_to_eos_transfer_batch.sh  run_PDA.sh  run_PDA_parallel.sh  run_acts.sh  run_acts_parallel.sh  run_acts_parallel_multiconfig.sh  run_snakemake.sh  run_snakemake_generic.sh  run_snakemake_parallel.sh  snakemake_submitter.sh
benchmarks/: __init__.py  _base.py
benchmarks/anomaly/: __init__.py  task.py
benchmarks/jets/: __init__.py  metrics.py  task.py
benchmarks/systems/: __init__.py  dataloading.py  latency.py  smallmodel.py
benchmarks/tracking/: __init__.py  metrics.py  task.py
colliderml/: __init__.py  _benchmark.py  _cli.py  _config.py  _docker.py  _loader.py  _remote.py  _simulate.py
config/: full_chain_config.yaml
configs/itk_comparison/: config_pt100_eta-3.0_3.0_neutralsFalse_secondariesFalse.yaml  config_pt100_eta-3.0_3.0_neutralsFalse_secondariesTrue.yaml  config_pt100_eta-3.0_3.0_neutralsTrue_secondariesFalse.yaml  config_pt100_eta-4.0_4.0_neutralsTrue_secondariesTrue.yaml  config_pt100_postpt1_eta-4.0_4.0_neutralsTrue_secondariesTrue.yaml  config_pt150_eta-3.0_3.0_neutralsTrue_secondariesFalse.yaml  config_pt150_eta-4.0_4.0_neutralsTrue_secondariesFalse.yaml  config_pt150_eta-4.0_4.0_neutralsTrue_secondariesTrue.yaml  config_pt150_postpt50_eta-4.0_4.0_neutralsTrue_secondariesTrue.yaml  config_pt200_eta-3.0_3.0_neutralsFalse_secondariesTrue.yaml  config_pt200_eta-3.0_3.0_neutralsTrue_secondariesFalse.yaml  config_pt200_eta-3.0_3.0_neutralsTrue_secondariesTrue.yaml  config_pt200_eta-4.0_4.0_neutralsTrue_secondariesTrue.yaml  config_pt50_eta-3.0_3.0_neutralsFalse_secondariesFalse.yaml  config_pt50_eta-3.0_3.0_neutralsTrue_secondariesFalse.yaml  config_pt50_eta-3.0_3.0_neutralsTrue_secondariesTrue.yaml  config_pt50_eta-4.0_4.0_neutralsFalse_secondariesFalse.yaml  config_pt50_eta-4.0_4.0_neutralsFalse_secondariesTrue.yaml  config_pt50_eta-4.0_4.0_neutralsTrue_secondariesFalse.yaml
configs_development/: README.md
configs_development/itk_comparison/: config_pt50_eta-4.0_4.0_neutralsTrue_secondariesTrue.yaml  (+27 more)
configs_production/: README.md  presets.yaml
container/: Dockerfile  colliderml.def  env_setup.yaml  setup_env.sh  test_container_env.sh  test_pipeline.sh  test_root_hepmc3.py
docs/: ADVANCED_SIMULATION_TOPICS.md  PYTHIA_SIMULATION_REVIEW.md  README.md  acts_spacepoint_pairing_fix.patch  brainstorm_accessibility.md  spacepoint_efficiency_spec.md
memory/: feedback_architecture_prefs.md  feedback_compute_discipline.md  feedback_data_safety.md  feedback_ml_frameworks.md  feedback_shared_interactive_speed.md  project_clustering_metrics.md  reference_salloc.md  user_danieltm.md
notebooks/: 0_DM_initial_exploration.ipynb  2_DM_effect_of_neutrals_comparison.ipynb  3_DM_collisions_debug.ipynb  clustering_algorithms.py  clustering_metrics.py  edm4hep_utils.py  loading_utils.py  utils.py
(+659 files in other folders)
