[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colliderml"
version = "0.4.0"
description = "Particle physics simulation data for machine learning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "ColliderML Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyarrow>=14.0",
    "huggingface-hub>=0.20",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "requests>=2.28",
    "numpy>=1.24",
]

[project.optional-dependencies]
simulate = ["docker>=7.0"]
benchmark = ["scikit-learn>=1.3"]
all = ["docker>=7.0", "plotly>=5.0", "pandas>=2.0", "scikit-learn>=1.3"]

[project.scripts]
colliderml = "colliderml._cli:main"

[project.urls]
Homepage = "https://colliderml.com"
Repository = "https://github.com/OpenDataDetector/ColliderML-Production"
Documentation = "https://colliderml.com/docs"

[tool.setuptools.packages.find]
# Both top-level packages ship in the wheel. `benchmarks` is a sibling of
# `colliderml` and contains the evaluation tasks imported by
# `colliderml.benchmark()`.
include = ["colliderml*", "benchmarks*"]

[tool.setuptools.package-data]
colliderml = ["presets.yaml"]
